@@ -5,82 +5,85 @@ import net.kyori.adventure.text.event.ClickEvent;
 import net.kyori.adventure.text.event.HoverEvent;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
+import org.bukkit.plugin.IllegalPluginAccessException;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.URL;
 import java.net.URLConnection;
+import java.net.URI;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class UpdateChecker {
     private final JavaPlugin plugin;
     private final String currentVersion;
-    private String latestVersion = null;
-    private boolean updateAvailable = false;
+    private volatile String latestVersion;
+    private volatile boolean updateAvailable;
 
     public UpdateChecker(JavaPlugin plugin) {
         this.plugin = plugin;
-        this.currentVersion = plugin.getDescription().getVersion();
+        this.currentVersion = plugin.getPluginMeta().getVersion();
     }
 
     /**
-     * Lädt die neueste Version von GitHub asynchron und benachrichtigt Ops
+     * Fetches the latest version from GitHub asynchronously and notifies admins
      */
     public void checkForUpdates() {
+        boolean notifyOps = plugin.getConfig().getBoolean("update-checker.notify-ops", true);
+        boolean notifyChat = plugin.getConfig().getBoolean("update-checker.notify-chat", true);
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
             try {
                 // Abrufen der neuesten Version von GitHub API
-                URL url = new URL("https://api.github.com/repos/vwtfafa/lock-end/releases/latest");
-                URLConnection connection = url.openConnection();
+                URI releasesUri = URI.create("https://api.github.com/repos/vwtfafa/lock-end/releases/latest");
+                URLConnection connection = releasesUri.toURL().openConnection();
                 connection.setConnectTimeout(5000);
                 connection.setReadTimeout(5000);
+                connection.setRequestProperty("User-Agent", "EndLock/" + currentVersion);
 
-                BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                String line;
                 StringBuilder response = new StringBuilder();
-                while ((line = reader.readLine()) != null) {
-                    response.append(line);
+                try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        response.append(line);
+                    }
                 }
-                reader.close();
 
-                // Parse die Version aus der JSON-Antwort
-                String json = response.toString();
-                int tagIndex = json.indexOf("\"tag_name\":\"");
-                if (tagIndex != -1) {
-                    int startIndex = tagIndex + 12;
-                    int endIndex = json.indexOf("\"", startIndex);
-                    latestVersion = json.substring(startIndex, endIndex);
+                // Parse the version from the JSON response
+                Matcher matcher = Pattern.compile("\\\"tag_name\\\"\\s*:\\s*\\\"([^\\\"]+)\\\"").matcher(response);
+                if (matcher.find()) {
+                    latestVersion = matcher.group(1);
                     updateAvailable = isNewerVersion(latestVersion, currentVersion);
 
-                    if (updateAvailable) {
+                    if (updateAvailable && notifyOps) {
                         plugin.getLogger().info("========================================");
                         plugin.getLogger().info("EndLock update available!");
                         plugin.getLogger().info("Current version: " + currentVersion);
                         plugin.getLogger().info("New version: " + latestVersion);
                         plugin.getLogger().info("Release page: https://github.com/vwtfafa/lock-end/releases");
                         plugin.getLogger().info("========================================");
+                    }
 
-                        // Notify online operators
-                        notifyOps();
+                    // Notify online operators via chat; the server may shut down
+                    // before the follow-up task can be scheduled.
+                    if (updateAvailable && notifyChat) {
+                        try {
+                            notifyOnlineAdmins();
+                        } catch (IllegalPluginAccessException exception) {
+                            plugin.getLogger().fine("Skipped update chat notification: plugin is shutting down.");
+                        }
                     }
                 }
             } catch (Exception e) {
-                plugin.getLogger().warning("Update-Check fehlgeschlagen: " + e.getMessage());
+                plugin.getLogger().warning("Update check failed: " + e.getMessage());
             }
         });
     }
 
     /**
-     * Sends a chat notification to online operators about available updates
+     * Sends a chat notification with the release link to online operators
      */
-    private void notifyOps() {
-        boolean notifyOps = plugin.getConfig().getBoolean("update-checker.notify-ops", true);
-        boolean notifyChat = plugin.getConfig().getBoolean("update-checker.notify-chat", true);
-
-        if (!notifyOps || !notifyChat) {
-            return;
-        }
-
+    private void notifyOnlineAdmins() {
         Bukkit.getScheduler().runTask(plugin, () -> {
             String releaseUrl = "https://github.com/vwtfafa/lock-end/releases";
             Component message = Component.text("[EndLock] Update available: " + latestVersion + " - Open release page")
@@ -88,6 +91,9 @@ public class UpdateChecker {
                 .clickEvent(ClickEvent.openUrl(releaseUrl))
                 .hoverEvent(HoverEvent.showText(Component.text("Open the latest release page")));
             for (Player player : Bukkit.getOnlinePlayers()) {
+                if (player == null) {
+                    continue;
+                }
                 if (player.isOp() || player.hasPermission("endlock.admin")) {
                     player.sendMessage(message);
                 }
@@ -96,16 +102,15 @@ public class UpdateChecker {
     }
 
     /**
-     * Vergleicht zwei Versionsnummern
+     * Compares two version numbers
      */
-    private boolean isNewerVersion(String newVersion, String currentVersion) {
+    static boolean isNewerVersion(String candidateVersion, String currentVersion) {
         try {
-            // Entferne 'v' Prefix wenn vorhanden
-            newVersion = newVersion.replaceFirst("^v", "");
-            currentVersion = currentVersion.replaceFirst("^v", "");
+            String newVersion = normalizeVersion(candidateVersion);
+            String normalizedCurrent = normalizeVersion(currentVersion);
 
             String[] newParts = newVersion.split("\\.");
-            String[] currentParts = currentVersion.split("\\.");
+            String[] currentParts = normalizedCurrent.split("\\.");
 
             for (int i = 0; i < Math.max(newParts.length, currentParts.length); i++) {
                 int newNum = i < newParts.length ? Integer.parseInt(newParts[i]) : 0;
@@ -118,6 +123,12 @@ public class UpdateChecker {
         } catch (Exception e) {
             return false;
         }
+    }
+
+    private static String normalizeVersion(String version) {
+        String normalized = version.trim().replaceFirst("^[vV]", "");
+        int prereleaseSeparator = normalized.indexOf('-');
+        return prereleaseSeparator >= 0 ? normalized.substring(0, prereleaseSeparator) : normalized;
     }
 
     public boolean isUpdateAvailable() {
